--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -59,7 +59,7 @@ development_status:
   3-3-implement-pdf-text-extraction: done
   3-4-implement-docx-text-extraction: done
   3-5-implement-resume-section-parsing: done
-  3-6-epic-3-integration-and-verification-testing: backlog
+  3-6-epic-3-integration-and-verification-testing: ready-for-dev
 
   # Epic 4: Job Description Input (V0.1)
   epic-4: backlog
