--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -91,7 +91,7 @@ development_status:
   epic-7: in-progress
   7-1-implement-error-display-component: done
   7-2-implement-retry-functionality: done
-  7-3-implement-timeout-recovery: backlog
+  7-3-implement-timeout-recovery: ready-for-dev
   7-4-implement-suggestion-feedback: backlog
   7-5-epic-7-integration-and-verification-testing: backlog
 
