feat(story-7-5): Epic 7 integration and verification testing - FINAL V0.1 STORY
Create comprehensive integration testing story for Epic 7 error handling and feedback:
- Test all 7 error types (INVALID_FILE_TYPE, FILE_TOO_LARGE, PARSE_ERROR, LLM_TIMEOUT, LLM_ERROR, RATE_LIMITED, VALIDATION_ERROR)
- Verify retry functionality with exponential backoff (1s, 2s, 4s delays)
- Test 60-second timeout recovery scenarios
- Test feedback recording and persistence across page refresh
- Verify all 31 V0.1 stories work together (no regressions)
- Test anonymous user workflows
- UAT acceptance scenarios
- Performance gate verification (error <100ms, feedback <500ms, backoff ±100ms)

Tasks include:
- 14 comprehensive tasks covering all acceptance criteria
- 8 integration test suites
- Manual testing checklist
- V0.1 regression verification
- Epic 7 test plan documentation

This is the FINAL V0.1 story. After completion, V0.1 will be ready for release (31/31 stories done).

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -94,7 +94,7 @@ development_status:
   7-2-implement-retry-functionality: done
   7-3-implement-timeout-recovery: done
   7-4-implement-suggestion-feedback: done
-  7-5-epic-7-integration-and-verification-testing: backlog
+  7-5-epic-7-integration-and-verification-testing: ready-for-dev
 
   # Epic 8: User Authentication (V1.0)
   epic-8: backlog
