--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -89,12 +89,12 @@ development_status:
   6-9-wire-suggestion-pipeline: done
 
   # Epic 7: Error Handling & Feedback (V0.1)
-  epic-7: in-progress
+  epic-7: done
   7-1-implement-error-display-component: done
   7-2-implement-retry-functionality: done
   7-3-implement-timeout-recovery: done
   7-4-implement-suggestion-feedback: done
-  7-5-epic-7-integration-and-verification-testing: ready-for-dev
+  7-5-epic-7-integration-and-verification-testing: done
 
   # Epic 8: User Authentication (V1.0)
   epic-8: backlog
