--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -141,7 +141,7 @@ development_status:
   # Epic 13: Hybrid Preferences (V0.5)
   epic-13: in-progress
   13-1-add-job-type-modification-level-types: done
-  13-2-add-preferences-database-migration: backlog
+  13-2-add-preferences-database-migration: done
   13-3-update-preferences-dialog-ui: done
   13-4-add-prompt-templates: backlog
   13-5-epic-13-integration-and-verification-testing: backlog
