story(16-2): Create comprehensive story context for dashboard home page
- Created 16-2-implement-dashboard-home-page.md with exhaustive context:
  - 10 detailed tasks with subtasks covering all 6 acceptance criteria
  - 5 new dashboard components: WelcomeHeader, QuickActionCard, ProgressStatsCard, RecentScansCard, GettingStartedGuide
  - Architecture overview with data loading patterns
  - File structure and component dependencies
  - Testing approach (unit + integration tests)
  - Previous story intelligence from Epic 10, 15, 16.1
  - Git pattern analysis and estimated file/line counts
  - Latest tech info for Next.js 16, Tailwind 4, shadcn/ui
  - Project context references and implementation checklist

- Updated sprint-status.yaml: Story 16.2 → ready-for-dev
- Updated CURRENT.md with story details and branch name
- Branch: feature/16-2-dashboard-home-page (clean, ready for dev-story)

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -163,7 +163,7 @@ development_status:
   # Epic 16: Dashboard UI Architecture (V0.5)
   epic-16: in-progress
   16-1-create-dashboard-layout-foundation: done
-  16-2-implement-dashboard-home-page: backlog
+  16-2-implement-dashboard-home-page: ready-for-dev
   16-3-implement-new-scan-page: backlog
   16-4-implement-scan-results-page: backlog
   16-5-implement-suggestions-page: backlog
