--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -165,7 +165,7 @@ development_status:
   16-1-create-dashboard-layout-foundation: done
   16-2-implement-dashboard-home-page: done
   16-3-implement-new-scan-page: done
-  16-4-implement-scan-results-page: backlog
+  16-4-implement-scan-results-page: ready-for-dev
   16-5-implement-suggestions-page: backlog
   16-6-migrate-history-and-settings: backlog
   16-7-create-full-marketing-landing-page: backlog
