story(16-5): Create comprehensive story context for suggestions page

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -166,7 +166,7 @@ development_status:
   16-2-implement-dashboard-home-page: done
   16-3-implement-new-scan-page: done
   16-4-implement-scan-results-page: done
-  16-5-implement-suggestions-page: backlog
+  16-5-implement-suggestions-page: ready-for-dev
   16-6-migrate-history-and-settings: backlog
   16-7-create-full-marketing-landing-page: backlog
   16-8-epic-16-integration-and-verification-testing: backlog
